2021-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/png.c (png_get_data): On a short read, assure that the
        remainder of the buffer is initialized just in case subsequent
        code accesses it.

        * coders/msl.c (MSLStartElement): Assure that
        'msl_info->attributes[n]' is not NULL before attempting to use it.
        This is assumed to eliminate oss-fuzz 40226
        "graphicsmagick:coder_MSL_fuzzer: ASSERT: image != (Image *)
        NULL".

2021-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLStartElement): Return immediately if there is
        already an error or the image is NULL.  Do not discard exceptions
        when calling functions which return a new image.  Try even harder
        to shut down the libxml2 parser. Fixes SourceForge issue 652 "SEGV
        in gm at coders/msl.c:883".

2021-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/widget.c (MagickXPreferencesWidget): Eliminate
        compilation warning about 'strlen' argument missing terminating
        nul.

2021-10-24  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * magick/wpg.c: ObjectID>=0x8000 automatically switches double precision on.

2021-09-18  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * PerlMagick/t/wmf/JPGinside.emf: Add test file: EMF that embedds
        JPG.

2021-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/blob.c (WriteBlob): Use appropriate handle for bzip2.
        Patch by Sam James <sam@gentoo.org>.

2021-08-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (initialize_jasper): Make minimal use of new JasPer
        function jas_initialize() in order to avoid severe problems with
        jas_init().

        * configure.ac: Detect new JasPer function jas_initialize().

2021-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLError): Call xmlStopParser() rather than